name:                haskell-hello-world
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Sourcegraph, Inc.
maintainer:          benjaminsummers1987@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-hello-world
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
